--- a/Imersão_IA_Aula_4_.ipynb
+++ b/Imersão_IA_Aula_4_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaye63R76rInuCx8xDL3SH",
+      "authorship_tag": "ABX9TyOUkvL9WIxJ8BaZH0+eiq2w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,10 +41,9 @@
       "cell_type": "code",
       "source": [
         "import google.generativeai as genai\n",
-        "\n",
-        "GOOGLE_API_KEY='AIzaSyAGXqC-4ghDMowDs--RnIYvmx76An3PzRg'\n",
-        "\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "from google.colab import userdata\n",
+        "api_key = userdata.get('SECREAT_KEY')\n",
+        "genai.configure(api_key= \"api_key\")\n"
       ],
       "metadata": {
         "id": "0s9nAJmUtIBH"
